--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -746,27 +746,27 @@ progress {
 
 @media (min-width: 576px) {
   .container-sm, .container {
-    max-width: 540px;
+    max-width: 1440px;
   }
 }
 @media (min-width: 768px) {
   .container-md, .container-sm, .container {
-    max-width: 720px;
+    max-width: 1440px;
   }
 }
 @media (min-width: 992px) {
   .container-lg, .container-md, .container-sm, .container {
-    max-width: 960px;
+    max-width: 1440px;
   }
 }
 @media (min-width: 1200px) {
   .container-xl, .container-lg, .container-md, .container-sm, .container {
-    max-width: 1140px;
+    max-width: 1440px;
   }
 }
 @media (min-width: 1400px) {
   .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
-    max-width: 1320px;
+    max-width: 1440px;
   }
 }
 :root {
@@ -3732,7 +3732,7 @@ textarea.form-control-lg {
   --bs-nav-link-padding-x: 1rem;
   --bs-nav-link-padding-y: 0.5rem;
   --bs-nav-link-font-weight: ;
-  --bs-nav-link-color: var(--bs-link-color);
+  --bs-nav-link-color: #191A23;
   --bs-nav-link-hover-color: var(--bs-link-hover-color);
   --bs-nav-link-disabled-color: var(--bs-secondary-color);
   display: flex;
@@ -11857,8 +11857,9 @@ textarea.form-control-lg {
 }
 .navbar-button {
   border: 1px solid #191A23;
-  height: 100%;
-  padding: 0 40px;
+  height: 68px;
+  padding: 20px 35px;
+  width: 264px;
 }
 
 .navbar-button:hover {
@@ -11868,7 +11869,15 @@ textarea.form-control-lg {
 .intro-btn {
   background: #191A23;
   color: #F3F3F3;
-  padding: 20px 40px;
+  width: 264px;
+  height: 68px;
+  max-width: 264px;
+  min-width: 264px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20px;
+  align-self: flex-start;
 }
 
 .intro-btn:hover {
@@ -11885,16 +11894,22 @@ textarea.form-control-lg {
 .menu {
   padding: 0 100px;
   height: 68px;
+  padding-top: 60px;
 }
 .menu .navbar-brand h2 {
   margin: 0;
   padding: 0;
+  font-weight: 900;
 }
 .menu div {
   height: 100%;
 }
 .menu li {
   padding: 0 20px;
+}
+
+.menu .nav-link {
+  color: #191A23 !important;
 }
 
 .fluid-margin {
@@ -11913,15 +11928,64 @@ textarea.form-control-lg {
   fill: #191A23;
 }
 
+.intro-section .col-lg-4 {
+  width: 531px;
+  height: 481px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 35px;
+}
+
+.intro-section .col-lg-8 {
+  width: 600px;
+  height: 515px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.intro-section .row.align-items-center {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.row > * {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.col-lg-4 h5 {
+  width: 498px;
+  height: 112px;
+  margin: 0;
+}
+
 mark {
   background: #B9FF66;
 }
 
 .services-card {
+  box-sizing: border-box;
+  width: 600px;
   height: 310px;
   padding: 50px;
   border: solid 1px #191A23;
   box-shadow: 0px 3px 0px #191A23;
+  border-radius: 45px;
+}
+
+.gx-custom {
+  --bs-gutter-x: 40px;
+}
+
+.gy-custom {
+  --bs-gutter-y: 40px;
+}
+
+mark {
+  border-radius: 7px;
 }
 
 .services-card-primary {
@@ -11940,12 +12004,28 @@ mark {
   color: #F3F3F3;
 }
 
+.services-card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 93px;
+}
+
 .contact-section {
   border: none;
 }
 
 body {
   font-family: "Space Grotesk", Arial, sans-serif;
+}
+
+.section-container {
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 100px;
+  padding-right: 100px;
+  box-sizing: border-box;
 }
 
 /*# sourceMappingURL=style.css.map */
