--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -3,12 +3,14 @@
 .menu{
     padding: 0 100px;
     height: 68px;
+    padding-top:60px;
 
 
     .navbar-brand{
         h2{
             margin: 0;
             padding: 0;
+            font-weight: 900;
         }
     }
     div{
@@ -17,4 +19,7 @@
     li{
         padding: 0 20px;
     }
+}
+.menu .nav-link {
+  color: $gray-900 !important;
 }
