--- a/scss/sections/_services.scss
+++ b/scss/sections/_services.scss
@@ -4,11 +4,25 @@ mark{
     background: $secondary;
 }
 
-.services-card{
+.services-card {
+    box-sizing: border-box;
+    width: 600px;
     height: 310px;
     padding: 50px;
     border: solid 1px $gray-900;
     box-shadow: 0px 3px 0px $gray-900;
+    border-radius: 45px;
+}
+
+.gx-custom {
+  --bs-gutter-x: 40px;
+}
+.gy-custom {
+  --bs-gutter-y: 40px;
+}
+
+mark{
+    border-radius: 7px;
 }
 
 .services-card-primary{
@@ -25,4 +39,11 @@ mark{
 .services-card-black{
     background: $gray-900;
     color: $primary;
+}
+
+.services-card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 93px; // vertical gap between title and button
 }
