--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,3 +21,12 @@
 body {
   font-family: $font-family-space-grotesk;
 }
+
+.section-container {
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 100px;
+  padding-right: 100px;
+  box-sizing: border-box;
+}
