--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -6,6 +6,7 @@
     height: 68px; // Set your desired fixed height
     padding: 20px 35px;
     width: 264px;
+    margin-left: 20px;
 
 }
 .navbar-button:hover {
