--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,8 @@
 @use "sections/intro";
 @use "sections/services";
 @use "sections/contact";
+@use "sections/casestudies";
+@use "sections/workingprocess";
 
 // FONT
 
