--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -2,4 +2,31 @@
 
 .contact-section {
     border: none;
+    height:347px;
+    position:relative;
 }   
+.contact-section .image-box{
+    position: relative;
+    height:347px;
+    overflow: visible;
+}
+
+.contact-section .contact-img {
+  position: absolute;
+  top: 50%;
+  right: -40px;
+  height: 400px;
+  width: auto;
+  transform: translateY(-50%);
+  z-index: 2;
+  max-width: none;
+}
+
+.contact-section .rounded-5 {
+    height: 347px;
+    overflow: visible; // allow image to overflow
+    min-height: 347px;
+    max-height: 347px;
+    display: flex;
+    align-items: center;
+}
