--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -5,7 +5,9 @@
 }
 
 .intro-section{
-    padding: 0 100px;
+    padding: 70px 100px 0px 100px;
+    height: 771px;
+    min-height: 771px;
 }
 .logos-margin{
     margin-top:70px;
@@ -47,4 +49,20 @@
         height: 112px;
         margin: 0;
     }
+}
+
+.logos-row {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap:48px;
+  padding-left: 0;
+  padding-right: 0;
+}
+.logo-svg {
+  height: 48px;
+  width:auto;
+  display: inline-block;
+  object-fit: contain;
 }
