--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -1,37 +1,31 @@
 @use "../custom.scss" as *;
-
 .contact-section {
-    border: none;
-    height:347px;
-    position:relative;
-}   
-.contact-section .image-box{
-    position: relative;
-    height:347px;
-    overflow: visible;
+    padding-top: 120px;
 }
 
-.contact-section .contact-img {
-  position: absolute;
-  top: 50%;
-  right: -40px;
-  height: 400px;
-  width: auto;
-  transform: translateY(-50%);
-  z-index: 2;
-  max-width: none;
+.contact-section .rounded-5.bg-primary {
+  padding: 0px 60px;
+  height: 347px;
+  width: 1240px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; // Vertically center children
 }
 
-.contact-section .rounded-5 {
-    height: auto;
-    overflow: visible; 
-    min-height: 347px;
-    max-height: auto;
-    display: flex;
-    align-items: center;
-    padding: 60px 60px; 
+.contact-section .rounded-5.bg-primary .align-items-center {
+  padding: 0px 60px;
+  height: 347px;
 }
 
-.contact-text-section{
-    margin-left:60px;
+.contact-text-section {
+  gap: 26px;
+  height: 227px;
+  width: 500px;
+
+}
+.contact-btn{
+    border-radius: 14px;
+}
+.image-box{
+    padding-right: 75px;
 }
