--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@
 @use "sections/contact";
 @use "sections/casestudies";
 @use "sections/workingprocess";
+@use "sections/team";
 
 // FONT
 
@@ -28,7 +29,7 @@ body {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: clamp(20px, 6vw, 100px);
+  padding-right: clamp(20px, 6vw, 100px);
   box-sizing: border-box;
 }
