all sections have been added, need refinements, alot of refinements

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,9 @@
 @use "sections/casestudies";
 @use "sections/workingprocess";
 @use "sections/team";
+@use "sections/testimonials";
+@use "sections/contactus";
+@use "sections/footer";
 
 // FONT
 
