--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12188,6 +12188,92 @@ mark {
   flex-shrink: 0;
 }
 
+.testimonials-box {
+  height: 625px;
+  background: #191A23;
+  border-radius: 45px;
+  margin-top: 80px;
+  padding-top: 84px;
+  overflow-x: hidden;
+  position: relative;
+}
+
+.testimonial-bubbles {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  transition: transform 0.5s cubic-bezier(0.77, 0, 0.18, 1);
+}
+
+.speechbubble-textbox {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 80%;
+  height: 80%;
+}
+
+.speechbubble-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  z-index: 1;
+}
+
+.text-clamp {
+  position: relative;
+  color: #F3F3F3;
+}
+
+.speechbubble-content {
+  position: relative;
+  z-index: 2;
+  padding: 48px 52px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.contact-section-2 {
+  padding-top: 120px;
+}
+
+.contact-section-2 .rounded-5.bg-primary {
+  padding: 0px 60px;
+  height: 347px;
+  width: 1240px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contact-section-2 .rounded-5.bg-primary .align-items-center {
+  padding: 0px 60px;
+  height: 347px;
+}
+
+.contact-text-section {
+  gap: 26px;
+  height: 227px;
+  width: 500px;
+}
+
+.contact-btn {
+  border-radius: 14px;
+}
+
+.image-box {
+  padding-right: 75px;
+}
+
 body {
   font-family: "Space Grotesk", Arial, sans-serif;
 }
