--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,3 +36,7 @@ body {
   padding-right: clamp(20px, 6vw, 100px);
   box-sizing: border-box;
 }
+.container {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
