--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12188,90 +12188,154 @@ mark {
   flex-shrink: 0;
 }
 
-.testimonials-box {
-  height: 625px;
+.testimonials-section {
+  padding-top: 208px;
+}
+
+.testimonials-card {
+  position: relative;
   background: #191A23;
   border-radius: 45px;
-  margin-top: 80px;
   padding-top: 84px;
-  overflow-x: hidden;
-  position: relative;
+  padding-bottom: 68px;
+  margin-top: 80px;
+  height: 625px;
+  width: 100%;
+  overflow: hidden;
 }
 
-.testimonial-bubbles {
+.speech-bubble-container {
+  position: relative;
+  width: 3280px;
+  height: 335px;
   display: flex;
   flex-direction: row;
-  height: 100%;
-  transition: transform 0.5s cubic-bezier(0.77, 0, 0.18, 1);
+  justify-content: space-between;
+  left: -350px;
 }
 
-.speechbubble-textbox {
-  position: relative;
+.scrolling-bar {
+  margin-top: 124px;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 80%;
-  height: 80%;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 564px;
 }
 
-.speechbubble-bg {
+.testimonials-left-arrow {
+  transform: rotate(180deg);
+}
+
+.testimonials-star-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 14px;
+  width: 146px;
+}
+
+.testimonials-star {
+  width: 14px;
+  height: 14px;
+}
+
+.speech-bubble {
+  position: relative;
+  display: inline-block;
+}
+
+.speech-bubble img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.speech-bubble-text {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  object-fit: contain;
-  z-index: 1;
+  padding: 52px 48px;
 }
 
-.text-clamp {
-  position: relative;
-  color: #F3F3F3;
+.speech-bubble-author {
+  margin-top: 20px;
+  margin-left: 80px;
 }
 
-.speechbubble-content {
-  position: relative;
-  z-index: 2;
-  padding: 48px 52px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-  text-align: center;
+.testimonials-star-active {
+  fill: red;
 }
 
 .contact-section-2 {
-  padding-top: 120px;
+  padding-top: 140px;
 }
 
-.contact-section-2 .rounded-5.bg-primary {
-  padding: 0px 60px;
-  height: 347px;
-  width: 1240px;
+.contact-form-container {
+  margin-top: 80px;
+  border-radius: 45px;
   display: flex;
+  flex-direction: row;
+  padding: 60px 100px;
+  position: relative;
+  overflow: hidden;
+  height: 773px;
+}
+
+.contact-form-container form {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  width: 556px;
 }
 
-.contact-section-2 .rounded-5.bg-primary .align-items-center {
-  padding: 0px 60px;
-  height: 347px;
+.contact-text-input {
+  display: flex;
+  flex-direction: column;
 }
 
-.contact-text-section {
-  gap: 26px;
-  height: 227px;
-  width: 500px;
-}
-
-.contact-btn {
+.contact-text-input input {
+  padding: 18px 30px;
+  border: solid 1px #191A23;
   border-radius: 14px;
 }
 
-.image-box {
-  padding-right: 75px;
+.contact-message-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-message-input input {
+  padding: 18px 30px;
+  border: solid 1px #191A23;
+  border-radius: 14px;
+  height: 160px;
+}
+
+.contact-image-box {
+  position: absolute;
+  top: 50%;
+  right: -27%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
+
+.contact-img {
+  display: block;
+  max-width: none;
+}
+
+.contact-submit-btn {
+  height: 68px;
+  border-radius: 14px;
+  background: #191A23;
+  color: #F3F3F3;
+}
+
+.contact-radio-input {
+  display: flex;
+  flex-direction: row;
+  gap: 35px;
 }
 
 body {
@@ -12285,6 +12349,11 @@ body {
   padding-left: clamp(20px, 6vw, 100px);
   padding-right: clamp(20px, 6vw, 100px);
   box-sizing: border-box;
+}
+
+.container {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 /*# sourceMappingURL=style.css.map */
