--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,10 +3,8 @@
 
 .navbar-button {
     border: 1px solid $gray-900;
-    height: 68px; // Set your desired fixed height
     padding: 20px 35px;
-    width: 264px;
-    margin-left: 20px;
+    border-radius: 14px;
 
 }
 .navbar-button:hover {
