--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap");
+@media (min-width: 1200px) {
+  h1, .h1 {
+    font-size: 60px !important;
+  }
+}
 /*!
  * Bootstrap  v5.3.7 (https://getbootstrap.com/)
  * Copyright 2011-2025 The Bootstrap Authors
@@ -11857,10 +11862,8 @@ textarea.form-control-lg {
 }
 .navbar-button {
   border: 1px solid #191A23;
-  height: 68px;
   padding: 20px 35px;
-  width: 264px;
-  margin-left: 20px;
+  border-radius: 14px;
 }
 
 .navbar-button:hover {
@@ -11894,7 +11897,6 @@ textarea.form-control-lg {
 
 .menu {
   padding: 0 100px;
-  height: 68px;
   padding-top: 60px;
 }
 .menu .navbar-brand h2 {
@@ -11931,7 +11933,7 @@ textarea.form-control-lg {
   fill: #191A23;
 }
 
-.intro-section .col-lg-4 {
+.intro-section .intro-text {
   width: 531px;
   height: 481px;
   display: flex;
@@ -11940,7 +11942,7 @@ textarea.form-control-lg {
   gap: 35px;
 }
 
-.intro-section .col-lg-8 {
+.intro-section .intro-logo {
   width: 600px;
   height: 515px;
   display: flex;
@@ -11954,12 +11956,16 @@ textarea.form-control-lg {
   justify-content: space-between;
 }
 
+.intro-text {
+  margin-right: auto;
+}
+
 .row > * {
   padding-right: 0;
   padding-left: 0;
 }
 
-.col-lg-4 h5 {
+.intro-text h5 {
   width: 498px;
   height: 112px;
   margin: 0;
@@ -11986,6 +11992,23 @@ mark {
   background: #B9FF66;
 }
 
+.title-mark {
+  background: #B9FF66;
+  padding: 4px 7px;
+  border-radius: 5px;
+}
+
+.services-title-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.services-title-description {
+  width: 580px;
+  padding-top: 4px;
+}
+
 .services-section {
   padding-top: 140px;
 }
@@ -12001,12 +12024,10 @@ mark {
   border-radius: 45px;
 }
 
-.gx-custom {
-  --bs-gutter-x: 40px;
-}
-
-.gy-custom {
-  --bs-gutter-y: 40px;
+.services-cards-column {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 mark {
@@ -12018,6 +12039,9 @@ mark {
 }
 
 .services-cards-container {
+  display: flex;
+  flex-direction: row;
+  gap: 40px 40px;
   padding-top: 80px;
 }
 
@@ -12080,6 +12104,17 @@ mark {
   padding-right: 75px;
 }
 
+.case-studies-title-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.case-studies-title-description {
+  width: 580px;
+  padding-top: 4px;
+}
+
 .case-studies-box {
   margin-top: 50px;
   padding: 60px 70px;
@@ -12116,6 +12151,18 @@ mark {
   box-shadow: 0 5px #191A23;
 }
 
+.working-process-studies-title-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 80px;
+}
+
+.working-process-title-description {
+  width: 580px;
+  padding-top: 4px;
+}
+
 .working-process-index {
   color: #191A23;
   font-size: 60px;
@@ -12145,12 +12192,16 @@ mark {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.team-section-title {
-  margin-right: 40px;
+.team-title-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 85px;
 }
 
-.team-section-description {
-  padding-right: 612px;
+.team-title-description {
+  width: 580px;
+  padding-top: 4px;
 }
 
 .team-section {
@@ -12190,6 +12241,18 @@ mark {
 
 .testimonials-section {
   padding-top: 208px;
+}
+
+.testimonials-title-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 85px;
+}
+
+.testimonials-title-description {
+  width: 580px;
+  padding-top: 4px;
 }
 
 .testimonials-card {
