--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -16,7 +16,7 @@
     fill: #191A23;
 }
 
-.intro-section .col-lg-4 {
+.intro-section .intro-text {
   width: 531px;
   height: 481px;
   display: flex;
@@ -25,7 +25,7 @@
   gap:35px;
 }
 
-.intro-section .col-lg-8 {
+.intro-section .intro-logo {
   width: 600px;
   height: 515px;
   display: flex;
@@ -39,11 +39,15 @@
   justify-content: space-between;
 }
 
+.intro-text{
+  margin-right: auto;
+}
+
 .row > * {
  padding-right: 0;
  padding-left: 0;
 }
-.col-lg-4{
+.intro-text{
     h5{
         width: 498px;
         height: 112px;
