--- a/scss/sections/_team.scss
+++ b/scss/sections/_team.scss
@@ -1,11 +1,14 @@
-@use "../custom.scss" as *;@use "../custom.scss" as *;
+@use "../custom.scss" as *;
 
-.team-section-title{
-    margin-right:40px;
+.team-title-container{
+    display: flex;
+    align-items: center;    
+    gap: 20px;  
+    margin-bottom:85px;
 }
-
-.team-section-description {
-    padding-right:612px;
+.team-title-description{
+    width:580px;
+    padding-top:4px;
 }
 
 .team-section {
