--- a/scss/sections/_testimonials.scss
+++ b/scss/sections/_testimonials.scss
@@ -3,6 +3,17 @@
   padding-top:208px;
 }
 
+.testimonials-title-container{
+    display: flex;
+    align-items: center;    
+    gap: 20px;  
+    margin-bottom:85px;
+}
+.testimonials-title-description{
+    width:580px;
+    padding-top:4px;
+}
+
 .testimonials-card{
   position:relative;
   background: $gray-900;
