--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11998,17 +11998,6 @@ mark {
   border-radius: 5px;
 }
 
-.services-title-container {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
-.services-title-description {
-  width: 580px;
-  padding-top: 4px;
-}
-
 .services-section {
   padding-top: 140px;
 }
@@ -12104,17 +12093,6 @@ mark {
   padding-right: 75px;
 }
 
-.case-studies-title-container {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
-.case-studies-title-description {
-  width: 580px;
-  padding-top: 4px;
-}
-
 .case-studies-box {
   margin-top: 50px;
   padding: 60px 70px;
@@ -12151,18 +12129,6 @@ mark {
   box-shadow: 0 5px #191A23;
 }
 
-.working-process-studies-title-container {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 80px;
-}
-
-.working-process-title-description {
-  width: 580px;
-  padding-top: 4px;
-}
-
 .working-process-index {
   color: #191A23;
   font-size: 60px;
@@ -12192,67 +12158,67 @@ mark {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.team-title-container {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 85px;
-}
-
-.team-title-description {
-  width: 580px;
-  padding-top: 4px;
-}
-
 .team-section {
   padding-top: 140px;
 }
 
-.bg-green {
-  background: #B9FF66;
-  color: #191A23;
-  border-radius: 7px;
-  padding: 0 8px;
+.team-cards-container {
+  margin-top: 80px;
+  display: flex;
+  flex-direction: row;
+  gap: 40px 40px;
 }
 
-.team-card {
+.team-member-card {
+  box-shadow: 0px 4px #191A23;
+  border: 1px solid #191A23;
+  border-radius: 45px;
+  width: 387px;
+  height: 331px;
+  padding: 40px 35px;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  position: relative;
-  padding: 40px 35px;
-  border-radius: 45px;
+  gap: 28px;
 }
 
-.team-icon {
-  position: absolute;
-  top: 16px;
-  right: 16px;
+.team-member-title {
+  display: flex;
+  flex-direction: column;
 }
 
-.team-desc {
-  font-size: 0.95rem;
-  color: #495057;
+.team-member-title h5 {
+  margin-top: auto;
+  margin-bottom: 0px;
 }
 
-.team-img {
-  flex-shrink: 0;
+.team-member-title p {
+  margin-bottom: 0px;
+}
+
+.team-member-photo-title {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.horizontal-line {
+  background: #191A23;
+  height: 1px;
+  width: 100%;
+}
+
+.team-member-card .team-member-description {
+  width: 317px;
+  height: 69px;
+}
+
+.team-member-card .team-member-description p {
+  font-size: 18px;
+  margin-bottom: 0px;
 }
 
 .testimonials-section {
   padding-top: 208px;
-}
-
-.testimonials-title-container {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 85px;
-}
-
-.testimonials-title-description {
-  width: 580px;
-  padding-top: 4px;
 }
 
 .testimonials-card {
@@ -12401,6 +12367,143 @@ mark {
   gap: 35px;
 }
 
+.contact-radio-input span {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 14px;
+}
+
+.contact-radio-input span input {
+  width: 28px;
+  height: 28px;
+  accent-color: #B9FF66;
+}
+
+.footer-section {
+  padding-top: 140px;
+}
+
+.footer-contents {
+  background: #191A23;
+  padding: 55px 60px;
+  padding-bottom: 50px;
+  border-radius: 45px 45px 0 0;
+}
+
+.footer-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 155px;
+}
+
+.footer-title-logo {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer-title-logo h3 {
+  background: none;
+  color: #F3F3F3;
+  margin-bottom: 0px;
+}
+
+.footer-navbar {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+
+.footer-navbar a {
+  color: white;
+}
+
+.footer-horizontal-line {
+  background: #F3F3F3;
+  height: 1px;
+  width: 100%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.footer-contacts {
+  display: flex;
+  flex-direction: row;
+  gap: 154px;
+}
+
+.footer-body {
+  padding-top: 66px;
+}
+
+.footer-adress {
+  margin-top: 27px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 332px;
+}
+
+.footer-adress p {
+  margin: 0;
+  color: #F3F3F3;
+}
+
+.footer-email {
+  display: flex;
+}
+
+.footer-title-mark {
+  background: #B9FF66;
+  margin-bottom: 27px;
+  border-radius: 7px;
+  padding: 3px 3px;
+}
+
+.footer-email form {
+  border-radius: 14px;
+  background: #292A32;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 12px;
+  padding: 58px 40px;
+}
+
+.footer-email form input[type=email] {
+  border: solid 1px #F3F3F3;
+  padding: 22px 35px;
+  background: none;
+  color: #F3F3F3;
+  border-radius: 14px;
+}
+
+.footer-email form input[type=submit] {
+  border: none;
+  padding: 22px 35px;
+  background: #B9FF66;
+  color: #191A23;
+  border-radius: 14px;
+}
+
+.footer-end p {
+  color: #F3F3F3;
+  margin-right: 40px;
+}
+
+.footer-end {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+.navbar-socials img {
+  width: 30px;
+  height: 30px;
+}
+
 body {
   font-family: "Space Grotesk", Arial, sans-serif;
 }
@@ -12409,14 +12512,25 @@ body {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: clamp(20px, 6vw, 100px);
-  padding-right: clamp(20px, 6vw, 100px);
+  padding-left: clamp(20px, 4vw, 100px);
+  padding-right: clamp(20px, 4vw, 100px);
   box-sizing: border-box;
 }
 
 .container {
   padding-left: 0 !important;
   padding-right: 0 !important;
+}
+
+.title-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.title-description {
+  width: 580px;
+  padding-top: 4px;
 }
 
 /*# sourceMappingURL=style.css.map */
