--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,11 +32,21 @@ body {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: clamp(20px, 6vw, 100px);
-  padding-right: clamp(20px, 6vw, 100px);
+  padding-left: clamp(20px, 4vw, 100px);
+  padding-right: clamp(20px, 4vw, 100px);
   box-sizing: border-box;
 }
 .container {
   padding-left: 0 !important;
   padding-right: 0 !important;
+}
+
+.title-container{
+    display: flex;
+    align-items: center;    
+    gap: 20px;   
+}
+.title-description{
+    width:580px;
+    padding-top:4px;
 }
