--- a/scss/sections/_workingprocess.scss
+++ b/scss/sections/_workingprocess.scss
@@ -33,3 +33,9 @@
 .expand-img-box-shadow{
     box-shadow:0 4px 4px rgba(0, 0, 0, 0.25);
 }
+.working-process-card-container{
+    margin-top:80px;
+    display:flex;
+    flex-direction: column;
+    gap:30px;
+}
