--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11862,7 +11862,7 @@ textarea.form-control-lg {
 }
 .navbar-button {
   border: 1px solid #191A23;
-  padding: 20px 35px;
+  padding: 20px 35px !important;
   border-radius: 14px;
 }
 
@@ -11893,6 +11893,10 @@ textarea.form-control-lg {
   background: #191A23;
   color: #F3F3F3;
   padding: 20px 40px;
+}
+
+.service-btn {
+  padding: 0 !important;
 }
 
 .menu {
@@ -11927,10 +11931,6 @@ textarea.form-control-lg {
 
 .logos-margin {
   margin-top: 70px;
-}
-
-.logo-svg {
-  fill: #191A23;
 }
 
 .intro-section .intro-text {
@@ -11986,8 +11986,25 @@ textarea.form-control-lg {
   width: auto;
   display: inline-block;
   object-fit: contain;
+  fill: #191A23;
 }
 
+@media (max-width: 600px) {
+  .intro-section {
+    padding: 0px 100px 0px 100px;
+    min-height: 1200px;
+  }
+  .intro-contents {
+    display: flex;
+    flex-direction: column !important;
+  }
+  .logos-row {
+    flex-wrap: wrap;
+  }
+  .logo-svg {
+    max-width: 150px;
+  }
+}
 mark {
   background: #B9FF66;
 }
@@ -12020,7 +12037,11 @@ mark {
 }
 
 mark {
+  background: #B9FF66;
   border-radius: 7px;
+  padding: 0 7px;
+  display: inline-block;
+  line-height: 1.2;
 }
 
 .services-card-primary {
@@ -12030,6 +12051,7 @@ mark {
 .services-cards-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 40px 40px;
   padding-top: 80px;
 }
@@ -12046,6 +12068,17 @@ mark {
   color: #F3F3F3;
 }
 .services-card-black .card-text {
+  color: #F3F3F3;
+}
+.services-card-black mark {
+  background: #fff;
+}
+
+.services-card-last {
+  background: #191A23;
+  color: #F3F3F3;
+}
+.services-card-last .card-text {
   color: #F3F3F3;
 }
 
@@ -12093,6 +12126,53 @@ mark {
   padding-right: 75px;
 }
 
+@media (max-width: 600px) {
+  .contact-section {
+    position: relative;
+    padding-top: 120px;
+    text-align: center;
+  }
+  .contact-text-section h3 {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 400px;
+  }
+  .contact-text-section p {
+    position: absolute;
+    bottom: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .contact-text-section a {
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .contact-section .rounded-5.bg-primary {
+    width: 500px;
+    height: 300px;
+    padding: 0px 30px;
+    align-items: start;
+    text-align: center;
+  }
+  .contact-section .rounded-5.bg-primary .align-items-center {
+    padding: 0px 10px;
+    height: 347px;
+  }
+  .image-box {
+    display: none;
+  }
+  .image-box img {
+    scale: 0.7;
+  }
+  .contact-section .rounded-5.bg-primary .align-items-center {
+    padding: 0px 60px;
+    height: 700px;
+  }
+}
 .case-studies-box {
   margin-top: 50px;
   padding: 60px 70px;
@@ -12122,6 +12202,15 @@ mark {
   margin: 0 64px;
 }
 
+@media (max-width: 600px) {
+  .case-studies-box {
+    flex-direction: column;
+    align-items: center;
+  }
+  .vertical-line {
+    display: none;
+  }
+}
 .working-process-card .card {
   padding: 41px 60px;
   border: solid 1px #191A23;
@@ -12158,6 +12247,13 @@ mark {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.working-process-card-container {
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
 .team-section {
   padding-top: 140px;
 }
@@ -12166,6 +12262,7 @@ mark {
   margin-top: 80px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 40px 40px;
 }
 
@@ -12174,7 +12271,6 @@ mark {
   border: 1px solid #191A23;
   border-radius: 45px;
   width: 387px;
-  height: 331px;
   padding: 40px 35px;
   display: flex;
   flex-direction: column;
@@ -12208,8 +12304,8 @@ mark {
 }
 
 .team-member-card .team-member-description {
-  width: 317px;
-  height: 69px;
+  width: 315px;
+  height: 135px;
 }
 
 .team-member-card .team-member-description p {
@@ -12217,6 +12313,17 @@ mark {
   margin-bottom: 0px;
 }
 
+@media (max-width: 700px) {
+  .team-cards-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .team-member-card {
+    width: 100%;
+    max-width: 400px;
+  }
+}
 .testimonials-section {
   padding-top: 208px;
 }
@@ -12235,7 +12342,7 @@ mark {
 
 .speech-bubble-container {
   position: relative;
-  width: 3280px;
+  width: 2000px;
   height: 335px;
   display: flex;
   flex-direction: row;
@@ -12253,6 +12360,7 @@ mark {
 
 .testimonials-left-arrow {
   transform: rotate(180deg);
+  opacity: 0.3;
 }
 
 .testimonials-star-container {
@@ -12293,9 +12401,28 @@ mark {
 }
 
 .testimonials-star-active {
-  fill: red;
+  fill: #B9FF66;
+  color: #B9FF66;
 }
 
+.testimonials-arrow {
+  cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  .speech-bubble-container {
+    position: relative;
+    width: 2000px;
+    height: 335px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    left: -750px;
+  }
+  .speech-bubble {
+    scale: 0.8;
+  }
+}
 .contact-section-2 {
   padding-top: 140px;
 }
@@ -12380,6 +12507,12 @@ mark {
   accent-color: #B9FF66;
 }
 
+@media (max-width: 600px) {
+  .contact-img {
+    display: none;
+    max-width: none;
+  }
+}
 .footer-section {
   padding-top: 140px;
 }
@@ -12497,6 +12630,12 @@ mark {
   margin-top: 50px;
   display: flex;
   flex-direction: row;
+}
+
+.navbar-socials {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
 }
 
 .navbar-socials img {
