--- a/scss/sections/_casestudies.scss
+++ b/scss/sections/_casestudies.scss
@@ -28,3 +28,14 @@
   align-self: stretch;
   margin: 0 64px;
 }
+
+@media (max-width: 600px) {
+  .case-studies-box {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .vertical-line {
+    display: none;
+  }
+}
