--- a/scss/sections/_team.scss
+++ b/scss/sections/_team.scss
@@ -9,6 +9,7 @@
   margin-top: 80px;
   display:flex;
   flex-direction:row; 
+  flex-wrap: wrap;
   gap: 40px 40px;
 
 }
@@ -18,7 +19,6 @@
   border: 1px solid $gray-900;
   border-radius: 45px;
   width:387px;
-  height:331px;
   padding:40px 35px;
   display:flex;
   flex-direction:column;
@@ -52,11 +52,24 @@
 }
 
 .team-member-card .team-member-description{
-  width: 317px;
-  height: 69px;
+  width:315px;
+  height:135px;
 }
 
 .team-member-card .team-member-description p{
   font-size: 18px;
   margin-bottom: 0px;
+}
+
+@media (max-width:700px){
+  .team-cards-container {
+    flex-direction: column;
+    align-items: center;
+    text-align:center;
+  }
+
+  .team-member-card {
+    width: 100%;
+    max-width: 400px;
+  }
 }
