--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11989,7 +11989,7 @@ textarea.form-control-lg {
   fill: #191A23;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
   .intro-section {
     padding: 0px 100px 0px 100px;
     min-height: 1200px;
@@ -12126,7 +12126,7 @@ mark {
   padding-right: 75px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
   .contact-section {
     position: relative;
     padding-top: 120px;
@@ -12152,7 +12152,7 @@ mark {
     transform: translateX(-50%);
   }
   .contact-section .rounded-5.bg-primary {
-    width: 500px;
+    width: 100%;
     height: 300px;
     padding: 0px 30px;
     align-items: start;
@@ -12202,7 +12202,7 @@ mark {
   margin: 0 64px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
   .case-studies-box {
     flex-direction: column;
     align-items: center;
@@ -12313,7 +12313,7 @@ mark {
   margin-bottom: 0px;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1000px) {
   .team-cards-container {
     flex-direction: column;
     align-items: center;
@@ -12409,6 +12409,34 @@ mark {
   cursor: pointer;
 }
 
+@media (max-width: 1000px) {
+  .speech-bubble-container {
+    position: relative;
+    width: 2000px;
+    height: 335px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    left: -550px;
+  }
+  .speech-bubble {
+    scale: 1;
+  }
+}
+@media (max-width: 700px) {
+  .speech-bubble-container {
+    position: relative;
+    width: 2000px;
+    height: 335px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    left: -670px;
+  }
+  .speech-bubble {
+    scale: 0.8;
+  }
+}
 @media (max-width: 600px) {
   .speech-bubble-container {
     position: relative;
@@ -12420,7 +12448,7 @@ mark {
     left: -750px;
   }
   .speech-bubble {
-    scale: 0.8;
+    scale: 0.75;
   }
 }
 .contact-section-2 {
@@ -12507,7 +12535,7 @@ mark {
   accent-color: #B9FF66;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
   .contact-img {
     display: none;
     max-width: none;
