--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -30,7 +30,7 @@
     padding-right: 75px;
 }
 
-@media (max-width:600px){
+@media (max-width:1000px){
 
   .contact-section {
     position:relative;
@@ -58,7 +58,7 @@
     transform:translateX(-50%);
   }
   .contact-section .rounded-5.bg-primary{
-    width:500px;
+    width:100%;
    height: 300px;
   padding: 0px 30px;
   align-items: start;
